--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
         <!-- The input form -->
         <form action="">
-            <input type="text" placeholder="Enter your task here...">
-            <button type="submit">+</button>
+            <input id="taskInput" type="text" placeholder="Enter your task here...">
+            <button id="newTask" type="submit">+</button>
         </form>
 
         <!-- The task list -->
-        <ul class="task-list"></ul>
+        <ul id="task-list"></ul>
 
     </div>
 
